// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReactionsRowButton > renders the default reaction button 1`] = `
<div>
  <button
    aria-label="Alice and Bob reacted with 👍"
    class="ReactionsRowButton-module_reactionsRowButton"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ReactionsRowButton-module_reactionsRowButtonContent"
    >
      👍
    </span>
    <span
      aria-hidden="true"
      class="ReactionsRowButton-module_reactionsRowButtonCount"
    >
      2
    </span>
  </button>
</div>
`;

exports[`ReactionsRowButton > renders the selected reaction button 1`] = `
<div>
  <button
    aria-label="Alice and Bob reacted with 👍"
    class="ReactionsRowButton-module_reactionsRowButton ReactionsRowButton-module_reactionsRowButtonSelected"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ReactionsRowButton-module_reactionsRowButtonContent"
    >
      👍
    </span>
    <span
      aria-hidden="true"
      class="ReactionsRowButton-module_reactionsRowButtonCount"
    >
      2
    </span>
  </button>
</div>
`;
